--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     #installBtn{
       display:none;position:fixed;bottom:calc(env(safe-area-inset-bottom,0px) + 24px);right:24px;z-index:9999;
       background:linear-gradient(135deg,#ff9800 0%,#ff5722 100%);color:#fff;border:none;padding:14px 24px;border-radius:50px;
-      font-size:18px;font-weight:700;box-shadow:0 6px 12px rgba(0,0,0,.25);cursor:pointer;display:flex;align-items:center;gap:10px;}
+      font-size:18px;font-weight:700;box-shadow:0 6px 12px rgba(0,0,0,.25);cursor:pointer;align-items:center;gap:10px;}
     #installBtn::before{content:"📲";font-size:24px;}
     #installBtn:hover{transform:scale(1.05);box-shadow:0 8px 16px rgba(0,0,0,.35);}
     @keyframes pulse{0%{transform:scale(1);box-shadow:0 0 0 0 rgba(255,87,34,.7);}
@@ -165,9 +165,12 @@
   <!-- Botão flutuante PWA -->
   <button id="installBtn" disabled>Install App</button>
 
-  <!-- Banner iOS -->
+  <!-- Banner iOS (EN + PT) -->
   <div id="iosInstallBanner">
-    To install the app, tap the <strong>Share</strong> button and choose “Add to Home Screen”.
+    To install the app, tap the <strong>Share</strong> button and choose “Add to Home Screen”.<br>
+    <span style="font-size:14px;display:block;margin-top:4px;">
+      Para instalar o app, toque no botão <strong>Compartilhar</strong> e depois em “Adicionar à Tela de Início”.
+    </span>
     <button id="iosBannerClose">OK</button>
   </div>
 
