--- a/index.html
+++ b/index.html
@@ -25,19 +25,63 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
   <style>
-    /* ---------- layout original ---------- */
-    body{margin:0;font-family:Arial, sans-serif;overflow:auto;}
-    html,body{height:100%;}
-    .container{
-      width:100%;max-width:1200px;margin:0 auto;padding:20px;text-align:center;position:relative;
-      background-image:url('imagens/fundo.png');background-repeat:repeat;background-size:200%;overflow:auto;
+    /* ---------- reset de box-sizing para evitar estouro lateral ---------- */
+    *, *::before, *::after{
+      box-sizing:border-box;
     }
-    .subtitle{margin-top:40px;font-size:24px;font-weight:bold;color:#333;text-align:center;}
-    .levels{display:flex;flex-wrap:wrap;justify-content:center;gap:20px;padding:20px;}
+
+    /* ---------- layout original (ajustado para mobile) ---------- */
+    body{
+      margin:0;
+      font-family:Arial, sans-serif;
+      overflow-x:hidden; /* impede scroll horizontal */
+      overflow-y:auto;
+    }
+    html,body{height:100%;}
+
+    .container{
+      width:100%;
+      max-width:1200px;
+      margin:0 auto;
+      padding:20px;
+      text-align:center;
+      position:relative;
+      background-image:url('imagens/fundo.png');
+      background-repeat:repeat;
+      background-size:200%;
+      overflow-x:hidden;   /* garante que nada vaze para os lados */
+      overflow-y:auto;
+    }
+
+    /* Imagens dentro do container nunca ultrapassam a largura da tela */
+    .container img{
+      max-width:100%;
+      height:auto;
+    }
+
+    .subtitle{
+      margin-top:40px;
+      font-size:24px;
+      font-weight:bold;
+      color:#333;
+      text-align:center;
+    }
+    .levels{
+      display:flex;
+      flex-wrap:wrap;
+      justify-content:center;
+      gap:20px;
+      padding:20px;
+    }
     .level-button{
-      width:200px;height:200px;background-size:cover;background-repeat:no-repeat;display:inline-block;
+      width:200px;
+      height:200px;
+      background-size:cover;
+      background-repeat:no-repeat;
+      display:inline-block;
       /* NEW: estado pessimista por padrão (bloqueado) */
-      filter:grayscale(100%); pointer-events:none;
+      filter:grayscale(100%);
+      pointer-events:none;
     }
     .level0{background-image:url('imagens/Level0_button.png');}
     .levelA{background-image:url('imagens/levelA.png');}
@@ -47,70 +91,192 @@
 
     /* ========= AVATAR + NOME (SEM CAIXA) ========= */
     .login-container{
-      position:absolute; top:16px; right:14px; z-index:20;
-      display:inline-flex; flex-direction:column; align-items:center; gap:4px;
-      background:none; border:none; box-shadow:none; padding:0;
+      position:absolute;
+      top:16px;
+      right:14px;
+      z-index:20;
+      display:inline-flex;
+      flex-direction:column;
+      align-items:center;
+      gap:4px;
+      background:none;
+      border:none;
+      box-shadow:none;
+      padding:0;
       cursor:pointer;
     }
     .user-icon{
-      width:55px; height:auto; display:block;
-      border:none; box-shadow:none; border-radius:0; object-fit:contain;
+      width:55px;
+      height:auto;
+      display:block;
+      border:none;
+      box-shadow:none;
+      border-radius:0;
+      object-fit:contain;
       pointer-events:none;
     }
     .user-name{
-      margin:0; line-height:1.05; text-align:center;
-      font-size:13px; font-weight:700; color:#1a5f34;
-      white-space:nowrap; max-width:180px; overflow:hidden; text-overflow:ellipsis;
+      margin:0;
+      line-height:1.05;
+      text-align:center;
+      font-size:13px;
+      font-weight:700;
+      color:#1a5f34;
+      white-space:nowrap;
+      max-width:180px;
+      overflow:hidden;
+      text-overflow:ellipsis;
       text-shadow: 0 1px 1px rgba(255,255,255,0.45), 0 1px 2px rgba(0,0,0,0.18);
     }
     .login-caret{ display:none !important; }
 
     .dropdown{
-      display:none; position:absolute; right:0; top:calc(100% + 10px); z-index:25;
-      min-width:220px; background:#fff; border-radius:12px;
-      box-shadow:0 14px 30px rgba(0,0,0,0.16); overflow:hidden;
+      display:none;
+      position:absolute;
+      right:0;
+      top:calc(100% + 10px);
+      z-index:25;
+      min-width:220px;
+      background:#fff;
+      border-radius:12px;
+      box-shadow:0 14px 30px rgba(0,0,0,0.16);
+      overflow:hidden;
       border:1px solid rgba(0,0,0,0.06);
     }
-    .dropdown a{display:block;padding:12px 14px;font-size:15px;color:#222;text-decoration:none;text-align:left;}
+    .dropdown a{
+      display:block;
+      padding:12px 14px;
+      font-size:15px;
+      color:#222;
+      text-decoration:none;
+      text-align:left;
+    }
     .dropdown a:hover{background:#f2f2f2;}
 
     /* ---------- robô, play e convites ---------- */
-    .robo-container{display:flex;flex-direction:column;align-items:center;margin:20px auto;}
-    .robo-img{width:300px;height:auto;}
-    .play-button{margin-top:-40px;padding:8px 16px;border:2px solid #ccc;border-radius:20px;background:#fff;color:#000;
-      font-weight:bold;font-size:16px;box-shadow:0 2px 4px rgba(0,0,0,.3);display:flex;align-items:center;gap:8px;cursor:pointer;}
+    .robo-container{
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      margin:20px auto;
+    }
+    .robo-img{
+      width:300px;
+      height:auto;
+    }
+    .play-button{
+      margin-top:-40px;
+      padding:8px 16px;
+      border:2px solid #ccc;
+      border-radius:20px;
+      background:#fff;
+      color:#000;
+      font-weight:bold;
+      font-size:16px;
+      box-shadow:0 2px 4px rgba(0,0,0,.3);
+      display:flex;
+      align-items:center;
+      gap:8px;
+      cursor:pointer;
+    }
     .play-button:hover{background:#eee;}
-    .invitation-container{display:flex;justify-content:center;align-items:center;gap:20px;margin:20px 0;}
-    .invitation-button,.free-games-button{max-width:40%;height:auto;cursor:pointer;border-radius:10px;
-      box-shadow:0 4px 8px rgba(0,0,0,.2);transition:.3s;}
-    .invitation-button:hover,.free-games-button:hover{transform:scale(1.05);box-shadow:0 6px 12px rgba(0,0,0,.3);}
+    .invitation-container{
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      gap:20px;
+      margin:20px 0;
+      flex-wrap:wrap;
+    }
+    .invitation-button,.free-games-button{
+      max-width:40%;
+      height:auto;
+      cursor:pointer;
+      border-radius:10px;
+      box-shadow:0 4px 8px rgba(0,0,0,.2);
+      transition:.3s;
+    }
+    .invitation-button:hover,.free-games-button:hover{
+      transform:scale(1.05);
+      box-shadow:0 6px 12px rgba(0,0,0,.3);
+    }
 
     /* ---------- BOTÃO PWA ---------- */
     #installBtn{
-      display:none;position:fixed;bottom:calc(env(safe-area-inset-bottom,0px) + 24px);right:24px;z-index:9999;
-      background:linear-gradient(135deg,#ff9800 0%,#ff5722 100%);color:#fff;border:none;padding:14px 24px;border-radius:50px;
-      font-size:18px;font-weight:700;box-shadow:0 6px 12px rgba(0,0,0,.25);cursor:pointer;align-items:center;gap:10px;}
+      display:none;
+      position:fixed;
+      bottom:calc(env(safe-area-inset-bottom,0px) + 24px);
+      right:24px;
+      z-index:9999;
+      background:linear-gradient(135deg,#ff9800 0%,#ff5722 100%);
+      color:#fff;
+      border:none;
+      padding:14px 24px;
+      border-radius:50px;
+      font-size:18px;
+      font-weight:700;
+      box-shadow:0 6px 12px rgba(0,0,0,.25);
+      cursor:pointer;
+      align-items:center;
+      gap:10px;
+    }
     #installBtn::before{content:"📲";font-size:24px;}
-    #installBtn:hover{transform:scale(1.05);box-shadow:0 8px 16px rgba(0,0,0,.35);}
-    @keyframes pulse{0%{transform:scale(1);box-shadow:0 0 0 0 rgba(255,87,34,.7);}
-      70%{transform:scale(1.05);box-shadow:0 0 0 12px rgba(255,87,34,0);}100%{transform:scale(1);box-shadow:0 0 0 0 rgba(255,87,34,0);}}
+    #installBtn:hover{
+      transform:scale(1.05);
+      box-shadow:0 8px 16px rgba(0,0,0,.35);
+    }
+    @keyframes pulse{
+      0%{transform:scale(1);box-shadow:0 0 0 0 rgba(255,87,34,.7);}
+      70%{transform:scale(1.05);box-shadow:0 0 0 12px rgba(255,87,34,0);}
+      100%{transform:scale(1);box-shadow:0 0 0 0 rgba(255,87,34,0);}
+    }
     #installBtn.pulse{animation:pulse 2s infinite;}
 
     /* ---------- banner iOS ---------- */
-    #iosInstallBanner{display:none;position:fixed;bottom:0;left:0;right:0;background:#fffbe8;border-top:1px solid #ccc;
-      padding:12px 16px;text-align:center;font-size:16px;z-index:10000;}
-    #iosInstallBanner button{margin-left:10px;background:#ff5722;color:#fff;border:none;padding:6px 12px;border-radius:6px;cursor:pointer;}
+    #iosInstallBanner{
+      display:none;
+      position:fixed;
+      bottom:0;
+      left:0;
+      right:0;
+      background:#fffbe8;
+      border-top:1px solid #ccc;
+      padding:12px 16px;
+      text-align:center;
+      font-size:16px;
+      z-index:10000;
+    }
+    #iosInstallBanner button{
+      margin-left:10px;
+      background:#ff5722;
+      color:#fff;
+      border:none;
+      padding:6px 12px;
+      border-radius:6px;
+      cursor:pointer;
+    }
 
     /* NEW: overlay de permissões (UX + bloqueio de clique) */
     #permOverlay{
-      position:fixed; inset:0; background:rgba(255,255,255,.6);
-      display:none; z-index:30; /* acima dos botões de level, abaixo do dropdown (25)? Vamos sobrepor tudo */
+      position:fixed;
+      inset:0;
+      background:rgba(255,255,255,.6);
+      display:none;
+      z-index:30;
       backdrop-filter:saturate(180%) blur(2px);
     }
     #permOverlay .inner{
-      position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
-      background:#fff; border:1px solid rgba(0,0,0,.08); border-radius:12px; padding:12px 16px;
-      box-shadow:0 10px 24px rgba(0,0,0,.15); font-weight:600; color:#333;
+      position:absolute;
+      left:50%;
+      top:50%;
+      transform:translate(-50%,-50%);
+      background:#fff;
+      border:1px solid rgba(0,0,0,.08);
+      border-radius:12px;
+      padding:12px 16px;
+      box-shadow:0 10px 24px rgba(0,0,0,.15);
+      font-weight:600;
+      color:#333;
     }
   </style>
 </head>
@@ -249,9 +415,27 @@
     }
 
     /* ---------- PWA botão instalar ---------- */
-    function showInstallButton(){installBtn.disabled=false;installBtn.style.display='flex';installBtn.classList.add('pulse');}
-    function hideInstallButton(){installBtn.style.display='none';installBtn.classList.remove('pulse');installBtn.disabled=true;}
-    function controlPWAButtons(){ if(isInStandaloneMode()){hideInstallButton();return;} if(deferredPrompt){showInstallButton();} else {hideInstallButton();}}
+    function showInstallButton(){
+      installBtn.disabled=false;
+      installBtn.style.display='flex';
+      installBtn.classList.add('pulse');
+    }
+    function hideInstallButton(){
+      installBtn.style.display='none';
+      installBtn.classList.remove('pulse');
+      installBtn.disabled=true;
+    }
+    function controlPWAButtons(){
+      if(isInStandaloneMode()){
+        hideInstallButton();
+        return;
+      }
+      if(deferredPrompt){
+        showInstallButton();
+      } else {
+        hideInstallButton();
+      }
+    }
     if(isIOS && !isInStandaloneMode()){
       const b=document.getElementById("iosInstallBanner");
       b.style.display="block";
@@ -260,31 +444,50 @@
     window.addEventListener('beforeinstallprompt',e=>{
       if(isInStandaloneMode()) return;
       e.preventDefault();
-      deferredPrompt=e; showInstallButton();
+      deferredPrompt=e;
+      showInstallButton();
     });
     installBtn.addEventListener('click',async ()=>{
-      if(!deferredPrompt) return; hideInstallButton();
-      deferredPrompt.prompt(); await deferredPrompt.userChoice; deferredPrompt=null; setTimeout(controlPWAButtons,500);
+      if(!deferredPrompt) return;
+      hideInstallButton();
+      deferredPrompt.prompt();
+      await deferredPrompt.userChoice;
+      deferredPrompt=null;
+      setTimeout(controlPWAButtons,500);
     });
-    window.addEventListener('appinstalled',()=>{deferredPrompt=null;hideInstallButton();});
+    window.addEventListener('appinstalled',()=>{
+      deferredPrompt=null;
+      hideInstallButton();
+    });
     async function verificarInstalacaoInicial(){
-      if(isInStandaloneMode()){hideInstallButton();return;}
+      if(isInStandaloneMode()){
+        hideInstallButton();
+        return;
+      }
       if('getInstalledRelatedApps' in navigator){
         try{
           const apps=await navigator.getInstalledRelatedApps();
-          if(apps.length>0){hideInstallButton();}
+          if(apps.length>0){
+            hideInstallButton();
+          }
         }catch(e){}
       }
       controlPWAButtons();
     }
     function updateNetworkStatus(){
-      if(!navigator.onLine) installBtn.disabled=true; else if(deferredPrompt) installBtn.disabled=false;
+      if(!navigator.onLine){
+        installBtn.disabled=true;
+      } else if(deferredPrompt){
+        installBtn.disabled=false;
+      }
     }
     window.addEventListener('online',updateNetworkStatus);
     window.addEventListener('offline',updateNetworkStatus);
 
     /* ---------- TTS util ---------- */
-    function pickVoice(){ return (speechSynthesis.getVoices()||[]).find(v=>v.lang.toLowerCase().includes('en'))||null; }
+    function pickVoice(){
+      return (speechSynthesis.getVoices()||[]).find(v=>v.lang.toLowerCase().includes('en'))||null;
+    }
     function speakRobot(){
       const utt=new SpeechSynthesisUtterance("Hi, I'm Samuel! Click to discover the best and most fun way to learn English, or join us to play an exciting game!");
       if(englishVoice) utt.voice=englishVoice;
@@ -323,7 +526,9 @@
       const hasAny=alvo.size>0;
       if(hasAny) setPermOverlay(false);
     }
-    function enviarNivel(n){ n ? liberarNiveis([n]) : liberarNiveis(["Level1"]); }
+    function enviarNivel(n){
+      n ? liberarNiveis([n]) : liberarNiveis(["Level1"]);
+    }
 
     /* ---------- Guard de clique (NEW): impede navegação sem permissão ---------- */
     document.addEventListener('click', (e)=>{
@@ -373,12 +578,16 @@
           const avatar=d.avatar?`imagens/${d.avatar}`:"imagens/bonecologin1.png";
 
           // só avatar + nome (sem caixa)
-          loginLink.innerHTML=""; loginLink.removeAttribute("href");
+          loginLink.innerHTML="";
+          loginLink.removeAttribute("href");
           const img=document.createElement("img");
-          img.className="user-icon"; img.alt="User avatar"; img.src=avatar;
+          img.className="user-icon";
+          img.alt="User avatar";
+          img.src=avatar;
           img.onerror=()=>{img.src='imagens/bonecologin1.png';};
           const p=document.createElement("p");
-          p.className="user-name"; p.textContent=name;
+          p.className="user-name";
+          p.textContent=name;
           loginLink.append(img,p);
 
           let dash="";
@@ -388,12 +597,21 @@
           }else if(d.role==="aluno"){
             dash='<a href="painel_aluno.html" class="dashboard-link">STUDENT DASHBOARD</a>';
 
-            const liberarPorPreferencia=(lista)=>{ if(Array.isArray(lista)&&lista.length){liberarNiveis(lista);return true;} return false; };
+            const liberarPorPreferencia=(lista)=>{
+              if(Array.isArray(lista)&&lista.length){
+                liberarNiveis(lista);
+                return true;
+              }
+              return false;
+            };
             const tentarAlunoDireto=()=>{
               const arrAluno=normalizarListaLevels(d.levels_liberados);
               if(liberarPorPreferencia(arrAluno)) return;
               const nAluno=normalizarNivel(d.nivel_em_curso);
-              if(nAluno){ enviarNivel(nAluno); return; }
+              if(nAluno){
+                enviarNivel(nAluno);
+                return;
+              }
               const arrFromProg=levelsAPartirDoProgresso(d.progresso);
               if(liberarPorPreferencia(arrFromProg)) return;
               enviarNivel(); // default: Level1
@@ -402,16 +620,26 @@
             if(d.atrelado_professor){
               try{
                 const turmasSnap=await firebase.database().ref("usuarios/"+d.atrelado_professor+"/turmas").once("value");
-                const turmas=turmasSnap.val()||{}; let registroAluno=null;
+                const turmas=turmasSnap.val()||{};
+                let registroAluno=null;
                 for(const turmaId in turmas){
                   const st=turmas[turmaId]?.students?.[user.uid];
-                  if(st){registroAluno=st; break;}
+                  if(st){
+                    registroAluno=st;
+                    break;
+                  }
                 }
                 if(registroAluno){
                   const arrProf=normalizarListaLevels(registroAluno.levels_liberados);
-                  if(liberarPorPreferencia(arrProf)){} else {
+                  if(liberarPorPreferencia(arrProf)){
+                    // ok
+                  } else {
                     const nProf=normalizarNivel(registroAluno.nivel_em_curso);
-                    if(nProf){enviarNivel(nProf);} else {tentarAlunoDireto();}
+                    if(nProf){
+                      enviarNivel(nProf);
+                    } else {
+                      tentarAlunoDireto();
+                    }
                   }
                 }else{
                   tentarAlunoDireto();
@@ -425,7 +653,10 @@
           }
           userDropdown.innerHTML=`${dash}<a href="#" id="logout">LEAVE</a>`;
           document.querySelectorAll(".dashboard-link").forEach(l=>{
-            l.onclick=e=>{ e.preventDefault(); window.location.href=l.getAttribute("href"); };
+            l.onclick=e=>{
+              e.preventDefault();
+              window.location.href=l.getAttribute("href");
+            };
           });
 
           // Dropdown abre/fecha
@@ -433,8 +664,14 @@
             const shouldOpen=(typeof open==="boolean")?open:(userDropdown.style.display!=="block");
             userDropdown.style.display=shouldOpen?"block":"none";
           }
-          loginContainer.onclick=(e)=>{ if(!firebase.auth().currentUser) return; e.preventDefault(); toggleDropdown(); };
-          window.addEventListener("click",(e)=>{ if(!loginContainer.contains(e.target)) toggleDropdown(false); });
+          loginContainer.onclick=(e)=>{
+            if(!firebase.auth().currentUser) return;
+            e.preventDefault();
+            toggleDropdown();
+          };
+          window.addEventListener("click",(e)=>{
+            if(!loginContainer.contains(e.target)) toggleDropdown(false);
+          });
 
           // NEW: se por algum motivo ninguém liberou nada (dados vazios), overlay some no enviarNivel/default
           if(!permissionsReady){
@@ -466,7 +703,9 @@
     });
 
     /* ---------- DOM Ready ---------- */
-    function pickVoice(){ return (speechSynthesis.getVoices()||[]).find(v=>v.lang.toLowerCase().includes('en'))||null; }
+    function pickVoice(){
+      return (speechSynthesis.getVoices()||[]).find(v=>v.lang.toLowerCase().includes('en'))||null;
+    }
     document.addEventListener("DOMContentLoaded",()=>{
       // NEW: garante bloqueio inicial antes de qualquer interação
       bloquearTodosNiveis();
