--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     body{
       margin:0;
       font-family:Arial, sans-serif;
-      overflow-x:hidden !important;   /* <<< CORRIGE O SCROLL HORIZONTAL */
+      overflow-x:hidden !important;   /* evita scroll horizontal */
       overflow-y:auto;
     }
     html,body{ height:100%; }
@@ -165,6 +165,28 @@
       box-shadow:0 2px 4px rgba(0,0,0,.3);
     }
 
+    .invitation-container{
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      gap:20px;
+      margin:20px 0;
+      flex-wrap:wrap;
+    }
+
+    .invitation-button,.free-games-button{
+      max-width:40%;
+      cursor:pointer;
+      border-radius:10px;
+      box-shadow:0 4px 8px rgba(0,0,0,.2);
+      transition:.3s;
+    }
+
+    .invitation-button:hover,.free-games-button:hover{
+      transform:scale(1.05);
+      box-shadow:0 6px 12px rgba(0,0,0,.3);
+    }
+
     /* PWA INSTALL BUTTON */
     #installBtn{
       display:none;
@@ -245,6 +267,14 @@
       box-shadow:0 10px 24px rgba(0,0,0,.15);
     }
 
+    /* Rodapé simples */
+    footer{
+      margin-top:20px;
+      font-size:12px;
+      color:#333;
+      text-align:center;
+      line-height:1.4;
+    }
   </style>
 </head>
 
@@ -290,11 +320,17 @@
 
     </main>
 
-    <!-- 👇 NOVO: Convites movidos PARA O FINAL DA PÁGINA -->
+    <!-- Convites no final da página -->
     <div class="invitation-container" id="invitationContainer">
       <img src="imagens/convite.gif" class="invitation-button" id="invitationButton" alt="Invitation"/>
       <img src="imagens/Free_Games.gif" class="free-games-button" id="freeGamesButton" alt="Free Games"/>
     </div>
+
+    <!-- Rodapé -->
+    <footer>
+      © 2025 Hannah English Course — All rights reserved.<br>
+      © 2025 Curso de Inglês Hannah — Todos os direitos reservados.
+    </footer>
 
   </div>
 
@@ -333,10 +369,7 @@ if(!firebase.apps.length){
   firebase.initializeApp(firebaseConfig);
 }
 firebase.auth().setPersistence(firebase.auth.Auth.Persistence.LOCAL);
-/* ===========================================================
-   CONTINUAÇÃO DO SCRIPT
-   PARTE 2 / 2
-=========================================================== */
+
 
 /* ========================= PWA =========================== */
 
@@ -432,15 +465,25 @@ window.addEventListener("online",updateNetworkStatus);
 window.addEventListener("offline",updateNetworkStatus);
 
 
-
 /* ====================== ÁUDIO DO ROBÔ ======================= */
 
 const robotAudio=document.getElementById("robotAudio");
 const roboImage=document.getElementById("roboImage");
 
+/* SUGESTÃO PARA SINCRONIZAR: pré-carregar o GIF antes da primeira vez */
+let roboGifLoaded=false;
+(function preloadRoboGif(){
+  const img = new Image();
+  img.onload = ()=>{ roboGifLoaded=true; };
+  img.src = "imagens/robo_fala.gif";
+})();
+
 function playRobotAudio(){
   if(!robotAudio) return;
   try{
+    // garante que o GIF já foi carregado e troca a imagem logo
+    roboImage.src="imagens/robo_fala.gif";
+
     robotAudio.currentTime=0;
     robotAudio.play().catch(err=>console.error("Erro ao tocar áudio:",err));
   }catch(e){
@@ -450,6 +493,7 @@ function playRobotAudio(){
 
 if(robotAudio){
   robotAudio.addEventListener("play",()=>{
+    // reforça a troca (caso algum navegador atrase)
     roboImage.src="imagens/robo_fala.gif";
   });
   robotAudio.addEventListener("ended",()=>{
@@ -459,7 +503,6 @@ if(robotAudio){
     roboImage.src="imagens/robo_estatico.png";
   });
 }
-
 
 
 /* ====================== PERMISSÕES DE NÍVEIS ======================= */
@@ -549,7 +592,6 @@ function enviarNivel(n){
 }
 
 
-
 /* =========================== BLOQUEIO DE CLIQUE =========================== */
 
 document.addEventListener("click",(e)=>{
@@ -568,7 +610,6 @@ document.addEventListener("click",(e)=>{
 },true);
 
 
-
 /* ====================== AUTH LISTENER ======================= */
 
 firebase.auth().onAuthStateChanged(async user=>{
@@ -576,7 +617,6 @@ firebase.auth().onAuthStateChanged(async user=>{
   const userDropdown=document.getElementById("userDropdown");
   const subtitleLoggedOut=document.getElementById("subtitleLoggedOut");
   const subtitleLoggedIn=document.getElementById("subtitleLoggedIn");
-  const invitationContainer=document.getElementById("invitationContainer");
   const loginContainer=document.getElementById("loginContainer");
 
   bloquearTodosNiveis();
@@ -756,7 +796,7 @@ document.addEventListener("DOMContentLoaded",()=>{
     location.href="https://hannahenglishcourse.netlify.app/game.html";
   };
 
-  /* ✔️ RESTAURADO: clique no título para scroll top */
+  /* Clique no título para rolar para o topo */
   document.getElementById("subtitleLoggedOut").onclick = () => {
     window.scrollTo({top:0,behavior:"smooth"});
   };
@@ -773,7 +813,6 @@ if("serviceWorker" in navigator){
     .then(r=>console.log("SW registrado:", r.scope))
     .catch(err=>console.error("SW erro:",err));
 }
-
 </script>
 
 </body>
